[gd_scene load_steps=13 format=3 uid="uid://dt0dth5btcaop"]

[ext_resource type="Script" path="res://Scripts/EnemyScripts/enemy_drone.gd" id="1_ro72j"]
[ext_resource type="PackedScene" uid="uid://bb6eeb5442fp7" path="res://Scenes/EnemyScenes/enemy_bullet.tscn" id="2_kgica"]
[ext_resource type="Texture2D" uid="uid://het0orge6o5e" path="res://Assets/Character Assets/EvilPropellant1.png" id="2_tmnv7"]
[ext_resource type="Texture2D" uid="uid://c2gwceqnefqoo" path="res://Assets/Character Assets/EvilPropellant2.png" id="3_axxhr"]
[ext_resource type="Texture2D" uid="uid://bnr45j82lon1k" path="res://Assets/EvilShip.png" id="3_f8nag"]
[ext_resource type="PackedScene" uid="uid://blwb5kc6qkmlb" path="res://Assets/Explosion/Explosion.tscn" id="3_iv0nh"]
[ext_resource type="Texture2D" uid="uid://ddbs0yfv2qiil" path="res://Assets/Character Assets/EvilPropellant3.png" id="4_m0pi2"]
[ext_resource type="AudioStream" uid="uid://dg55vl7x8opay" path="res://Sounds/DefiniteShot.wav" id="7_invj2"]
[ext_resource type="AudioStream" uid="uid://1x4bywne5h6w" path="res://Sounds/laserexp2.mp3" id="8_ljwwu"]
[ext_resource type="AudioStream" uid="uid://bj5njjahf6mv8" path="res://Sounds/AccessDeniedNow.wav" id="9_ngwx3"]

[sub_resource type="SpriteFrames" id="SpriteFrames_01k2d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_tmnv7")
}, {
"duration": 1.0,
"texture": ExtResource("3_axxhr")
}, {
"duration": 1.0,
"texture": ExtResource("4_m0pi2")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pm23s"]
size = Vector2(5.33333, 5.33333)

[node name="EnemyDrone" type="Node2D" groups=["Enemy"]]
scale = Vector2(3, 3)
script = ExtResource("1_ro72j")
enemy_speed = 50
enemy_bullet_scene = ExtResource("2_kgica")
explosion = ExtResource("3_iv0nh")

[node name="EvilShip" type="Sprite2D" parent="."]
texture = ExtResource("3_f8nag")

[node name="Propellant" type="AnimatedSprite2D" parent="."]
position = Vector2(17, 0)
sprite_frames = SubResource("SpriteFrames_01k2d")
autoplay = "default"
frame_progress = 0.432842
speed_scale = 1.5

[node name="Bullet" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Hurtbox" type="Area2D" parent="."]
scale = Vector2(3, 3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(5.82801e-07, -3.97364e-08)
shape = SubResource("RectangleShape2D_pm23s")

[node name="EnemyShot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_invj2")
volume_db = -5.0
bus = &"Sound"

[node name="EnemyDestroyed" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_ljwwu")
bus = &"Sound"

[node name="EnemyHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_ngwx3")
volume_db = -1.0
bus = &"Sound"

[node name="DeathTimer" type="Timer" parent="."]

[connection signal="timeout" from="Bullet" to="." method="_on_bullet_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
